tests/ui/restrictions/impl-restriction.stderr
error: trait cannot be implemented outside `external_impl_restriction`
  --> $DIR/impl-restriction.rs:10:1
   |
LL | impl external::TopLevel for LocalType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: $DIR/auxiliary/external-impl-restriction.rs:3:5
   |
LL | pub impl(crate) trait TopLevel {}
   |     ----------- trait restricted here

error: trait cannot be implemented outside `external_impl_restriction`
  --> $DIR/impl-restriction.rs:11:1
   |
LL | impl external::inner::Inner for LocalType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: $DIR/auxiliary/external-impl-restriction.rs:6:9
   |
LL |     pub impl(self) trait Inner {}
   |         ---------- trait restricted here

error: trait cannot be implemented outside `foo`
  --> $DIR/impl-restriction.rs:21:1
   |
LL |         pub(crate) impl(super) trait Foo {}
   |                    ----------- trait restricted here
...
LL | impl foo::bar::Foo for u8 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

